Fixed problem with the logo width on mobile devices

--- a/frontend/src/portal/portal.less
+++ b/frontend/src/portal/portal.less
@@ -41,7 +41,6 @@
 
   img {
     height: 100%;
-    width: 250px;
   }
 
   @media only screen and (max-width: @mobile-width-detection) {
